Fix: Fix env example

--- a/.env.example
+++ b/.env.example
@@ -10,10 +10,15 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_PORT=xx
+DB_DATABASE=xx
 DB_USERNAME=root
 DB_PASSWORD=
+
+MIDTRANS_MERCHANT_ID=xxxxxxx
+MIDTRANS_CLIENT_KEY=xxxxxxx
+MIDTRANS_SERVER_KEY=
+MIDTRANS_IS_PRODUCTION=false
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
