--- a/.env.example
+++ b/.env.example
@@ -17,8 +17,9 @@ DB_PASSWORD=
 
 MIDTRANS_MERCHANT_ID=xxxxxxx
 MIDTRANS_CLIENT_KEY=xxxxxxx
-MIDTRANS_SERVER_KEY=
+MIDTRANS_SERVER_KEY=xxxxxxx
 MIDTRANS_IS_PRODUCTION=false
+MIDTRANS_SNAP_URL=xxxxxxx
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
